# slm-porting

./: .gitignore  CMakeLists.txt  Makefile  OPT.md  README.md  csgs.py  example.py  pyproject.toml  regression.py  requirements.md  requirements.txt  slm_3dpointcloud.py  verification.py  visualization.py
analysis/: multiprecision.ipynb  results.ipynb  verification.ipynb
benchmark/: OPT.md  bench_rs.cpp
benchmark/generator/: README.md  pupil  scheduling
benchmark/include/: config.hpp  kernels.hpp  point.hpp  slm.hpp
benchmark/src/: benchmark.cpp  device_list.cpp  kernels.cpp  kernels.sycl.cpp  regression.cpp  scheduling.cpp  slm.cpp  units.cpp
cmake/: dependency_check.py
cpp/: CMakeLists.txt
cpp/include/: rand.h  slm.h  types.h  units.h
cpp/include/impl/: rs.h
cpp/src/: rand.cpp  slm.cpp  units.cpp  verification.cpp
cpp/tests/: test_rs.cpp  test_slm.cpp  test_spots.cpp  test_units.cpp
generator/: config.py  pupil_index_generator.py  scheduling.py
include/: config.hpp  kernels.hpp  kernels.sycl.hpp  shader.hpp  slm.hpp  templated.hpp  testing.hpp  units.hpp  utils.hpp  window.hpp
python/: algorithms.py  backend_numpy.py  common.py  compare.py  compare_with_serial.py  contract.py  csgs.py  dependency_manager.py  example.py  executor.py  main.py  refactor.py  regression.py  report.py  rng.py  scheduling.py  slm.py  slm_bridge.py  uarray.py  units.py  verification.py  visualization.py
python/common/: array.py  loader.py  slm.py  units.py
python/impl/: contract.py  jax.py  jaxcpu.py  jaxgpu.py  legacy.py  numpy.py  torchcpu.py
slm/common/: executor.py  loader.py  slm.py  units.py
slm/impl/: contract.py  impldecorator.py  jaxcpu.py  numpy.py  numpycpu.py  torchcpu.py
slmporting/core/: array.py  contract.py  slm.py  types.py
slmporting/cpp/: optimized.cpp  rs.cpp
slmporting/impl/: impl_cpp.py  impl_jax.py  impl_numpy.py  impl_torch.py
src/: analysis.cpp  benchmark.cpp  benchmark.sycl.cpp  interactive.cpp  kernels.cpp  kernels.sycl.cpp  legacy.cpp  main.cpp  main.sycl.cpp  pupil.cpp  pupil.gen.cpp  pupil.generator.cpp  regression.cpp  regression.sycl.cpp  render.cpp  scheduling.gen.cpp  scheduling.generator.cpp  serial.cpp  shader.cpp  slm.cpp  sycl.cpp  texture.cpp  units.cpp  utils.cpp  window.cpp
src/slmporting/core/: array.py  contract.py  slm.py  types.py
src/slmporting/impl/: jax.py  numpy.py  torch.py
src/slmporting/utils/: device_discovery.py  units.py
tests/contracts/: test_impl_macro.py
tests/unit/: test_array.py  test_slm.py  test_units.py
