[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "slm-porting"
version = "0.1.0"
description = "Research code for the performance portability of the Gerbert-Saxton algorithm on multiple python backends"
authors = [
  { name = "Mei Matteo", email = "teomei68@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "jax",
]

[project.optional-dependencies]
dev = [
  "torch",
  "triton",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["slm*"]
