[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slm-porting"
version = "0.1.0"
description = "A study in algorithm porting across backends and devices"
authors = [
	{ name = "Mei Matteo", email = "teomei68@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

# runtime dependencies
dependencies = [
	"numpy",
	"jax",
	"torch",
	"triton"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
