[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slmporting"
version = "0.1.0"
description = "A study in algorithm porting across backends and devices"
authors = [
	{ name = "Mei Matteo", email = "teomei68@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

# runtime dependencies
dependencies = [
	"numpy",
	"jax",
	"torch",
	"triton",
	"pytest",
	"ninja",

	"ipykernel",
	"ipywidgets",
	"matplotlib",
	"pandas",
	"tqdm"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
python_files = "tests/*.py"
